Update mv20y.html to fix thumbnails

--- a/mv20y.html
+++ b/mv20y.html
@@ -267,7 +267,7 @@
       card.className = "video-card";
 
       const img = document.createElement("img");
-      const originalSrc = `https://azaistats.github.io/images/thumbnails/${v.id}`;
+      const originalSrc = `https://azaistats.github.io/images/thumbnails/${v.id}.jpg`;
       const fallbackSrc = `https://azaistats.github.io/images/thumbnails/thisthumbnailislost.png`;
 
       img.src = originalSrc;
